# b20crunch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: how-it-works.md
src/: b20.rs  chain.rs  gpu.rs  kernel.rs  lib.rs  main.rs  mine.rs  words.rs
src/gpu/: kernel.cl
tests/: derivation.rs  gpu.rs  mine.rs
